all done in config yml file

--- a/public/photography/index.html
+++ b/public/photography/index.html
@@ -36,7 +36,7 @@
 <div id="regular-content">
 
   <div class="Titlerow"> 
-    <h1 class="workheading"><a class="work-title"> Photography </A> </h1>
+    <h1 class="workheading"><a class="work-title" href="//localhost:1313/photography/"> Photography </A> </h1>
      <div class="allcats"> 
    
        
@@ -55,6 +55,7 @@
    </div>
   </div>
 <div class="grid">
+
    
   <div class="grid-item">
     
