--- a/public/design/graphic/index.html
+++ b/public/design/graphic/index.html
@@ -3,6 +3,8 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<link rel="stylesheet" href="/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 <body>
 	<a href="/" id="gohome"> djmb</a>
@@ -53,8 +55,7 @@
          </div>
       </div>
       
-    <h1 class="workheading"><a class="work-title" > Design<a class="subcat">Graphic</a> </A> </h1>
-    
+  
 <div class="grid">
   
 
@@ -77,5 +78,16 @@
 
 
 	<script src="/js/custom.js" async defer></script>
+	<script>
+		if (window.netlifyIdentity) {
+		  window.netlifyIdentity.on("init", (user) => {
+			if (!user) {
+			  window.netlifyIdentity.on("login", () => {
+				document.location.href = "/admin/";
+			  });
+			}
+		  });
+		}
+	  </script>
 </body>
 </html>
