--- a/public/design/index.html
+++ b/public/design/index.html
@@ -3,6 +3,8 @@
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 	<link rel="stylesheet" href="/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 <body>
 	<a href="/" id="gohome"> djmb</a>
@@ -34,7 +36,7 @@
 <div id="regular-content">
 
   <div class="Titlerow"> 
-    <h1 class="workheading"><a class="work-title"> Design </A> </h1>
+    <h1 class="workheading"><a class="work-title" href="//localhost:1313/design/"> Design </A> </h1>
      <div class="allcats"> 
    
        
@@ -53,6 +55,7 @@
    </div>
   </div>
 <div class="grid">
+
    
   <div class="grid-item">
     
@@ -100,5 +103,16 @@
 
 
 	<script src="/js/custom.js" async defer></script>
+	<script>
+		if (window.netlifyIdentity) {
+		  window.netlifyIdentity.on("init", (user) => {
+			if (!user) {
+			  window.netlifyIdentity.on("login", () => {
+				document.location.href = "/admin/";
+			  });
+			}
+		  });
+		}
+	  </script>
 </body>
 </html>
