--- a/public/about/index.html
+++ b/public/about/index.html
@@ -46,7 +46,7 @@
   <div class="title"><a href="/about/">About</a> </div>
   <div class="grid about" id="double"> 
   <div class="grid-item">
-     <p><p>Lorem ipsum dolor sit amet. Ab sunt praesentium aut temporibus doloremque et quae tenetur vel quasi possimus qui consequatur iusto id quidem possimus. Qui maxime sapiente et excepturi magnam 33 quam delectus. Est autem iure est quos quia non expedita reiciendis qui dolorum voluptatem id illo voluptas aut necessitatibus veniam. Eum iste tempore et galisum ipsa aut perspiciatis magni non quaerat error qui officia itaque sit ratione iusto id quidem consequatur.</p>
+     <p><p>Born April 7th 2000, I started drawing at age 5. 19 years later and I haven&rsquo;t stopped.</p>
  </p>
     <div class="social-links"> 
 
