--- a/public/capturing/editorial/we-love-you-kate-shoot-for-prngrphy/index.html
+++ b/public/capturing/editorial/we-love-you-kate-shoot-for-prngrphy/index.html
@@ -27,6 +27,7 @@
     <br>
     </div>
 
+<div class="wrapper"> 
 <div class="regular-content">
 <div id="metadata"> 
 
@@ -176,6 +177,7 @@ updateThumbnails();
     </div>
     <div class="empty"></div>
     
+</div>
 </div>
 
 	<script src="/js/custom.js" async defer></script>
