--- a/public/creation/collage/no-time-for-small-talk-02/index.html
+++ b/public/creation/collage/no-time-for-small-talk-02/index.html
@@ -27,6 +27,7 @@
     <br>
     </div>
 
+<div class="wrapper"> 
 <div class="regular-content">
 <div id="metadata"> 
 
@@ -126,6 +127,7 @@ updateThumbnails();
     </div>
     <div class="empty"></div>
     
+</div>
 </div>
 
 	<script src="/js/custom.js" async defer></script>
