--- a/public/capturing/index.html
+++ b/public/capturing/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="icon" type="image/x-icon" href="/static/image/iconsforwebsites/32x32.png">
 </head>
 <body>
 	<div class="toprow"> <a href="/" id="gohome"> djmb </a> <a id="mailicon" href="mailto:darinjmb@gmail.com"><i class="fa fa-envelope-o" ></i></a>   </div>  
@@ -66,7 +67,7 @@
       
       <a class="subcategory  " href="//localhost:1313/capturing/editorial/">
         <div class="thumbimage-wrapper">
-          <img class="thumbimage" src="/image/iconsforwebsite/editorial.png">
+          <img class="thumbimage" src="/image/iconsforwebsite/artboard-3.png">
           
         </div>
         <br> Editorial
