changes to index, made to flexbox

--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
           <br>
       </div>
       
-      <div class="grid-item">
+      <div class="grid-item last">
      
         <a href="https://admin.shopify.com/store/715b5c/themes" target="_blank" rel="noopener noreferrer"vv class="subcategory">
             <div class="thumbimage-wrapper">
