--- a/public/creation/ai/index.html
+++ b/public/creation/ai/index.html
@@ -59,7 +59,7 @@
 <div class="grid">
   
   
- <div class="grid-item">
+ <div class="grid-item workblock">
       <div class="grid-image">
         <a  href="//localhost:1313/creation/ai/aurascapes-for-thinker/">
     
@@ -77,7 +77,7 @@
 
 
  
- <div class="grid-item">
+ <div class="grid-item workblock">
       <div class="grid-image">
         <a  href="//localhost:1313/creation/ai/another-chance-vol-1-stickers/">
     
