--- a/public/recent/index.html
+++ b/public/recent/index.html
@@ -35,11 +35,11 @@
 
 <div id="regular-content">
 
-<div class="grid">
+<div class="grid workgrid">
 
   
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/video/clothing/">
 
@@ -55,7 +55,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/video/test-video/">
 
@@ -71,7 +71,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/creation/collage/no-time-for-small-talk-_03/">
 
@@ -87,7 +87,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/creation/collage/no-time-for-small-talk-02/">
 
@@ -103,7 +103,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/creation/collage/no-time-for-small-talk-_01/">
 
@@ -119,7 +119,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/creation/collage/the-lesser-of-two-evils/">
 
@@ -135,7 +135,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/creation/collage/stroll-with-friends/">
 
@@ -151,7 +151,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/creation/collage/catch-and-release/">
 
@@ -167,7 +167,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/product/colmillo-hoodie-for-data/">
 
@@ -183,7 +183,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/editorial/we-love-you-kate-shoot-for-prngrphy/">
 
@@ -199,7 +199,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/product/haunted-starbucks-layflats/">
 
@@ -215,7 +215,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/product/haunted-starbucks-walmart-boots/">
 
@@ -231,7 +231,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/product/haunted-starbucks-collection/">
 
@@ -247,7 +247,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/editorial/miles-freedom-for-knock-twice/">
 
@@ -263,7 +263,7 @@
     </a>
   </div>
   
-  <div class="grid-item">
+  <div class="grid-item workblock">
   <div class="grid-image">
     <a class="imgcontainer" href="//localhost:1313/capturing/editorial/gang-box-for-knock-twice-akihabara/">
 
