--- a/public/about/index.html
+++ b/public/about/index.html
@@ -60,8 +60,9 @@
 </div>
     <div class="grid-item">
         <div class="grid-image aboutimg">
+         
           <a  href="//localhost:1313/about/">
-          </a>
+            <img src="/image/yourface.jpg"></a>
         </div>
 </div>
 
