--- a/public/about/index.html
+++ b/public/about/index.html
@@ -59,10 +59,10 @@
     </div>
 </div>
     <div class="grid-item">
-        <div class="grid-image aboutimg">
+        <div class="grid-image ">
          
           <a  href="//localhost:1313/about/">
-            <img src="/image/yourface.jpg"></a>
+            <img class="aboutimg" src="/image/screen-shot-2024-05-27-at-6.16.25-pm.png"></a>
         </div>
 </div>
 
