--- a/public/about/index.html
+++ b/public/about/index.html
@@ -50,11 +50,14 @@
  </p>
     <div class="social-links"> 
 
-    <a href="mail"><a class="grey">Email:</a>darin@email.com </a>
+    <a href="mail"><a class="grey">Email:</a>darinjmb@gmail.com </a>
   <br><br>
-    <a href="">Instagram </a><br>
-    <a href="">Are.na </a>
-  
+    <a href="https://www.instagram.com/darinjmb/" target="_blank" rel="noopener noreferrer">Instagram </a>
+    <a href="https://www.youtube.com/@darinjmb" target="_blank" rel="noopener noreferrer">YouTube </a>
+    <a href="https://www.tiktok.com/@darinjmb?_t=8qZyZCvKFEr&_r=1" target="_blank" rel="noopener noreferrer">Tiktok </a>
+    <a href="https://www.are.na/darin-morrison-beer/channels" target="_blank" rel="noopener noreferrer">Are.na </a>
+    <a href="https://zora.co/darinjmb" target="_blank" rel="noopener noreferrer">Zora</a>
+    
     
     </div>
 </div>
