about page change

--- a/public/capturing/editorial/knock-twice-clear-print/index.html
+++ b/public/capturing/editorial/knock-twice-clear-print/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" charset="utf-8">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+	<title>DJMB</title>
 	<link rel="stylesheet" href="/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -8,7 +9,7 @@
 	<link rel="icon" type="image/x-icon" href="/image/iconsforwebsite/32x32.png">
 </head>
 <body>
-	<div class="toprow"> <a href="/" id="gohome"> djmb <a id="mailicon" href="mailto:darinjmb@gmail.com"><i class="fa fa-envelope-o" ></i></a></a>    </div>  
+	<div class="toprow"> <a href="/" id="gohome"> djmb </a><a id="mailicon" href="mailto:darinjmb@gmail.com"><i class="fa fa-envelope-o" ></i></a>    </div>  
 	
 <nav id="top-right" class="navright">
        
@@ -32,7 +33,7 @@
     <br>
         <a href="shopify.com">Shop</a></div>
 
-<div class="wrapper"> 
+
     <div class="regular-content">
         <div id="metadata"></div>
 
@@ -183,7 +184,7 @@
         </div>
         <div class="empty"></div>
     </div>
-</div>
+
 
 	<script src="/js/custom.js" async defer></script>
 	<script>
