--- a/public/about/index.html
+++ b/public/about/index.html
@@ -43,7 +43,7 @@
    
 
   
-<div id="regular-content about"> 
+<div id="regular-content" class="about"> 
   <div class="title"><a href="/about/">About</a> </div>
   <div class="grid about" id="double"> 
  
