--- a/public/about/index.html
+++ b/public/about/index.html
@@ -48,7 +48,7 @@
   <div class="grid about" id="double"> 
  
     <div class="grid-item about">
-        <div class="grid-image ">
+        <div class="grid-image about ">
          
           <a  href="//localhost:1313/about/">
             <img class="aboutimg" src="/image/screen-shot-2024-05-27-at-6.16.25-pm.png"></a>
