--- a/public/capturing/editorial/we-love-you-kate-shoot-for-prngrphy/index.html
+++ b/public/capturing/editorial/we-love-you-kate-shoot-for-prngrphy/index.html
@@ -41,7 +41,7 @@
             <div id="description-block">
                 <div class="description">
                     <p>Editorial/post-production, shot on digicam for PRNGRPHY, 2024.</p>
-<p>Charliexcx wearing one on stage, 2024.</p>
+<p>As seen on Charliexcx, 2024.</p>
 
                 </div>
             </div>
@@ -203,7 +203,7 @@
             <div id="description-block-mobile">
                 <div class="description-mobile">
                     <p>Editorial/post-production, shot on digicam for PRNGRPHY, 2024.</p>
-<p>Charliexcx wearing one on stage, 2024.</p>
+<p>As seen on Charliexcx, 2024.</p>
 
                 </div>
             </div>
