--- a/public/creation/drawing/newwwwww-plz/index.html
+++ b/public/creation/drawing/newwwwww-plz/index.html
@@ -60,7 +60,7 @@
         <a class="meta-titledate">newwwwww plz, 2921</a><br>
     </div>
 </div>
-
+<div class="imageandarrows">
 
 <div class="carousel">
     
@@ -90,9 +90,9 @@
     <div class="arrow right-arrow" onclick="changeSlide(1)">&#10095;</div>
 </div>
 
+</div>
 
-
-<script>
+<script defer>
     let currentSlide = 0;
     let currentThumbnailSet = 0;
     const slides = document.querySelectorAll('.carousel img');
