--- a/public/firstpost/index.html
+++ b/public/firstpost/index.html
@@ -65,7 +65,7 @@
 
 
 
-<script>
+<script defer>
     let currentSlide = 0;
     let currentThumbnailSet = 0;
     const slides = document.querySelectorAll('.carousel img');
