--- a/public/creation/drawing/featured-imganother-test/index.html
+++ b/public/creation/drawing/featured-imganother-test/index.html
@@ -60,11 +60,11 @@
         <a class="meta-titledate">FEATURED IMGANOTHER TEST, 2021</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
+</div>
 
-
-
-<script>
+<script defer>
     let currentSlide = 0;
     let currentThumbnailSet = 0;
     const slides = document.querySelectorAll('.carousel img');
