--- a/public/capturing/editorial/another-chance-vol-2-event-poster/index.html
+++ b/public/capturing/editorial/another-chance-vol-2-event-poster/index.html
@@ -71,9 +71,9 @@
         <a class="meta-titledate">Another Chance Vol.2 Event Poster, 2022</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
