--- a/public/capturing/bird/large-billed-crow/index.html
+++ b/public/capturing/bird/large-billed-crow/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Large-Billed Crow, 2022</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
