--- a/public/capturing/bird/varied-tit/index.html
+++ b/public/capturing/bird/varied-tit/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Varied Tit, 2023</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
