--- a/public/capturing/product/abicsi-sunglasses/index.html
+++ b/public/capturing/product/abicsi-sunglasses/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">ABICSI Sunglasses Case, 2021</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
