--- a/public/capturing/product/demolition-company-paper-by-oligarchy/index.html
+++ b/public/capturing/product/demolition-company-paper-by-oligarchy/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Demolition Company Paper , 2022</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
