--- a/public/capturing/product/haunted-starbucks-walmart-boots/index.html
+++ b/public/capturing/product/haunted-starbucks-walmart-boots/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Haunted Starbucks Walmart Boots, 2024</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
