--- a/public/creation/collage/the-lesser-of-two-evils/index.html
+++ b/public/creation/collage/the-lesser-of-two-evils/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">The Lesser of Two Evils, 2024</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
