--- a/public/creation/design_1/another-chance-vol-2-sticker/index.html
+++ b/public/creation/design_1/another-chance-vol-2-sticker/index.html
@@ -71,9 +71,9 @@
         <a class="meta-titledate">Another Chance Vol.2 Sticker, 2022</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
