--- a/public/creation/design_1/hard-labour-event-flyer/index.html
+++ b/public/creation/design_1/hard-labour-event-flyer/index.html
@@ -72,9 +72,9 @@
         <a class="meta-titledate">Hard Labour Event Flyer, 2023</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
