--- a/public/creation/design_1/knock-twice-logo/index.html
+++ b/public/creation/design_1/knock-twice-logo/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Knock Twice Logo, 2018</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
