--- a/public/creation/design_1/knock-twice-x-eclecstacy-reincarnated-varsity-jacket-graphic/index.html
+++ b/public/creation/design_1/knock-twice-x-eclecstacy-reincarnated-varsity-jacket-graphic/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Knock Twice x Eclecstacy Varsity Jacket Graphic, 2023</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
