--- a/public/creation/drawing/multiple-men-396/index.html
+++ b/public/creation/drawing/multiple-men-396/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Multiple Men (396), 2024</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
