--- a/public/creation/drawing/multiple-men-up-to-no-good/index.html
+++ b/public/creation/drawing/multiple-men-up-to-no-good/index.html
@@ -69,9 +69,9 @@
         <a class="meta-titledate">Multiple Men up to No Good , 2024</a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
