--- a/public/firstpost/index.html
+++ b/public/firstpost/index.html
@@ -61,9 +61,9 @@
         <a class="meta-titledate">First post, </a><br>
     </div>
 </div>
+<div class="imageandarrows">
 
-
-
+</div>
 
 <script defer>
     let currentSlide = 0;
