--- a/public/creation/index.html
+++ b/public/creation/index.html
@@ -34,7 +34,7 @@
     <A href="//localhost:1313/about/"> About </A>
 
     <br>
-        <a href="shopify.com">Shop</a></div>
+        <a href="wwww.dmb.world">Shop</a></div>
 
 
 <div id="regular-content icons">
