--- a/public/creation/index.html
+++ b/public/creation/index.html
@@ -18,6 +18,7 @@
        
 </nav>
 <div class="content"> 
+  <a href="/">Home</a> <br>
    
     <A href="//localhost:1313/recent/"> Recent </A>
 
@@ -37,7 +38,7 @@
         <a href="wwww.dmb.world">Shop</a></div>
 
 
-<div id="regular-content icons">
+<div id="regular-content">
   <div class="icon grid">
 
     
