--- a/public/recent/index.html
+++ b/public/recent/index.html
@@ -18,6 +18,7 @@
        
 </nav>
 <div class="content"> 
+  <a href="/">Home</a> <br>
    
     <A href="//localhost:1313/recent/"> Recent </A>
 
@@ -586,6 +587,9 @@
 </div>
 
 
+</div>
+
+
 <div class="pagination">
   
     <div class="page-arrows">
@@ -611,9 +615,6 @@
     </div>
   
 </div>
-
-</div>
-
 
 	<script src="/js/custom.js" async defer></script>
 	<script>
