--- a/public/capturing/editorial/armée-dun-2/index.html
+++ b/public/capturing/editorial/armée-dun-2/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>shot in via stu</p>
+                    <p>Shot and edited for Armée D&rsquo;un. Taken in the Viapiana Dundas Dungeon, 2024.</p>
 
                 </div>
             </div>
@@ -292,7 +292,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>shot in via stu</p>
+                    <p>Shot and edited for Armée D&rsquo;un. Taken in the Viapiana Dundas Dungeon, 2024.</p>
 
                 </div>
             </div>
