--- a/public/capturing/product/haunted-starbucks-collection/index.html
+++ b/public/capturing/product/haunted-starbucks-collection/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Model e-commerce shoot for Haunted Starbucks at Knock Twice Studio, with careful post-production. Every detail was refined to look sharp, even up close, with a strong focus on perfecting the lighting and color.</p>
+                    <p>Model e-commerce shoot, and editing for Haunted Starbucks at Knock Twice Studio, 2024.</p>
 
                 </div>
             </div>
@@ -292,7 +292,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Model e-commerce shoot for Haunted Starbucks at Knock Twice Studio, with careful post-production. Every detail was refined to look sharp, even up close, with a strong focus on perfecting the lighting and color.</p>
+                    <p>Model e-commerce shoot, and editing for Haunted Starbucks at Knock Twice Studio, 2024.</p>
 
                 </div>
             </div>
