--- a/public/capturing/product/mass-hysteria-skateboard/index.html
+++ b/public/capturing/product/mass-hysteria-skateboard/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Trucker hat, tee, Enamel pin, and skateboard shot for Mass Hysteria in 2023.</p>
+                    <p>Product photography, and editing for Mass Hysteria. Shot in the Knock Twice studio, 2023.</p>
 
                 </div>
             </div>
@@ -368,7 +368,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Trucker hat, tee, Enamel pin, and skateboard shot for Mass Hysteria in 2023.</p>
+                    <p>Product photography, and editing for Mass Hysteria. Shot in the Knock Twice studio, 2023.</p>
 
                 </div>
             </div>
