--- a/public/capturing/editorial/chiyoda-ku-streets-for-knock-twice-by-gangbox/index.html
+++ b/public/capturing/editorial/chiyoda-ku-streets-for-knock-twice-by-gangbox/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Shot and edited in Tokyo for the Knock Twice by Gangbox collection in 2023.</p>
+                    <p>Shot and edited for the Knock Twice by Gangbox collection. Tokyo, 2023.</p>
 
                 </div>
             </div>
@@ -254,7 +254,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Shot and edited in Tokyo for the Knock Twice by Gangbox collection in 2023.</p>
+                    <p>Shot and edited for the Knock Twice by Gangbox collection. Tokyo, 2023.</p>
 
                 </div>
             </div>
