--- a/public/capturing/editorial/gang-box-for-knock-twice-chiyoda-ku/index.html
+++ b/public/capturing/editorial/gang-box-for-knock-twice-chiyoda-ku/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Directed, shot, and edited by Darin Morrison-Beer in Tokyo for the Knock Twice by Gang Box Collection, 2023.</p>
+                    <p>Directed, shot, and edited by Darin Morrison-Beer in Tokyo for the Knock Twice by Gang Box Collection, 2023. Starring Shin and Sai.</p>
 
                 </div>
             </div>
@@ -330,7 +330,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Directed, shot, and edited by Darin Morrison-Beer in Tokyo for the Knock Twice by Gang Box Collection, 2023.</p>
+                    <p>Directed, shot, and edited by Darin Morrison-Beer in Tokyo for the Knock Twice by Gang Box Collection, 2023. Starring Shin and Sai.</p>
 
                 </div>
             </div>
