--- a/public/capturing/product/active-labour-hoodie/index.html
+++ b/public/capturing/product/active-labour-hoodie/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Crewneck, Hoodie, and Tee, shot and post-production for Active Labour, 2023</p>
+                    <p>Crewneck, Hoodie, and Tee, shot and edited for Active Labour, 2023</p>
 
                 </div>
             </div>
@@ -349,7 +349,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Crewneck, Hoodie, and Tee, shot and post-production for Active Labour, 2023</p>
+                    <p>Crewneck, Hoodie, and Tee, shot and edited for Active Labour, 2023</p>
 
                 </div>
             </div>
