--- a/public/capturing/product/assorted-products-for-knock-twice/index.html
+++ b/public/capturing/product/assorted-products-for-knock-twice/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Product shots taken for Knock Twice, 2022.</p>
+                    <p>Product shots taken and edited for Knock Twice, 2022.</p>
 
                 </div>
             </div>
@@ -197,7 +197,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Product shots taken for Knock Twice, 2022.</p>
+                    <p>Product shots taken and edited for Knock Twice, 2022.</p>
 
                 </div>
             </div>
