--- a/public/capturing/product/colmillo-hoodie-for-data/index.html
+++ b/public/capturing/product/colmillo-hoodie-for-data/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>lay flat e-commerce shoot for Tainy&rsquo;s album DATA merchandise &ldquo;COLMILLO&rdquo; hoodie at Knock Twice Studio, with meticulous post-production. The images were refined to achieve a sharp and polished look, with a strong emphasis on lighting and color.</p>
+                    <p>Lay flat e-commerce shoot, and editing for Tainy&rsquo;s album DATA &ldquo;COLMILLO&rdquo; Hoodie and T-Shirt.</p>
 
                 </div>
             </div>
@@ -216,7 +216,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>lay flat e-commerce shoot for Tainy&rsquo;s album DATA merchandise &ldquo;COLMILLO&rdquo; hoodie at Knock Twice Studio, with meticulous post-production. The images were refined to achieve a sharp and polished look, with a strong emphasis on lighting and color.</p>
+                    <p>Lay flat e-commerce shoot, and editing for Tainy&rsquo;s album DATA &ldquo;COLMILLO&rdquo; Hoodie and T-Shirt.</p>
 
                 </div>
             </div>
