--- a/public/capturing/product/demolition-company-paper-by-oligarchy/index.html
+++ b/public/capturing/product/demolition-company-paper-by-oligarchy/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Lay flat e-commerce shoot for DEMOLITION COMPANY by OLIGARCHY paper at Knock Twice Studio, with thoughtful post-production. The images were carefully shot and edited, focusing on precise lighting and accurate color.</p>
+                    <p>Lay flat e-commerce shoot, and editing for DEMOLITION COMPANY by OLIGARCHY paper at Knock Twice Studio, 2022.</p>
 
                 </div>
             </div>
@@ -160,7 +160,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Lay flat e-commerce shoot for DEMOLITION COMPANY by OLIGARCHY paper at Knock Twice Studio, with thoughtful post-production. The images were carefully shot and edited, focusing on precise lighting and accurate color.</p>
+                    <p>Lay flat e-commerce shoot, and editing for DEMOLITION COMPANY by OLIGARCHY paper at Knock Twice Studio, 2022.</p>
 
                 </div>
             </div>
