--- a/public/capturing/product/eclecstacy-trucker-hats/index.html
+++ b/public/capturing/product/eclecstacy-trucker-hats/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Shot and edited for Eclecstacy at the Knock Twice Studio, 2023.</p>
+                    <p>Product photography and editing for Eclecstacy at the Knock Twice Studio, 2023.</p>
 
                 </div>
             </div>
@@ -292,7 +292,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Shot and edited for Eclecstacy at the Knock Twice Studio, 2023.</p>
+                    <p>Product photography and editing for Eclecstacy at the Knock Twice Studio, 2023.</p>
 
                 </div>
             </div>
