--- a/public/capturing/product/haunted-starbucks-walmart-boots/index.html
+++ b/public/capturing/product/haunted-starbucks-walmart-boots/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>E-commerce Product photography for Haunted Starbucks at Knock Twice Studio, with detailed post-production. Every aspect of the boots have been meticulously refined, with a strong emphasis on lighting and colour.</p>
+                    <p>E-commerce product photography, and editing for Haunted Starbucks at the Knock Twice Studio, 2024.</p>
 
                 </div>
             </div>
@@ -160,7 +160,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>E-commerce Product photography for Haunted Starbucks at Knock Twice Studio, with detailed post-production. Every aspect of the boots have been meticulously refined, with a strong emphasis on lighting and colour.</p>
+                    <p>E-commerce product photography, and editing for Haunted Starbucks at the Knock Twice Studio, 2024.</p>
 
                 </div>
             </div>
