--- a/public/capturing/product/knock-twice-clear-prints-2023/index.html
+++ b/public/capturing/product/knock-twice-clear-prints-2023/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Shot and edited for the Knock Twice clear print collection.</p>
+                    <p>Lay-flat photography and editing for the Knock Twice clear print collection. Shot at the Knock Twice studio, 2023.</p>
 
                 </div>
             </div>
@@ -160,7 +160,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Shot and edited for the Knock Twice clear print collection.</p>
+                    <p>Lay-flat photography and editing for the Knock Twice clear print collection. Shot at the Knock Twice studio, 2023.</p>
 
                 </div>
             </div>
