--- a/public/capturing/product/knock-twice-x-eclecstacy-varsity-jacket/index.html
+++ b/public/capturing/product/knock-twice-x-eclecstacy-varsity-jacket/index.html
@@ -43,7 +43,7 @@
         <div class="main-content">
             <div id="description-block">
                 <div class="description">
-                    <p>Designed, shot and edited small capsule of 15 Vintage Re-born Varsity Jackets, for Knock Twice x Eclecstacy in 2023.</p>
+                    <p>Designed, shot and edited small capsule of 15 Vintage Re-born Varsity Jackets, for Knock Twice x Eclecstacy. Shot in the Knock Twice studio, 2023.</p>
 
                 </div>
             </div>
@@ -216,7 +216,7 @@
 
             <div id="description-block-mobile">
                 <div class="description-mobile">
-                    <p>Designed, shot and edited small capsule of 15 Vintage Re-born Varsity Jackets, for Knock Twice x Eclecstacy in 2023.</p>
+                    <p>Designed, shot and edited small capsule of 15 Vintage Re-born Varsity Jackets, for Knock Twice x Eclecstacy. Shot in the Knock Twice studio, 2023.</p>
 
                 </div>
             </div>
